[tool.poetry]
name = "flutter-issue-99671"
version = "0.1.0"
description = ""
authors = ["Naoto Ikeno <naoto.ikeno@dena.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "*"
fastapi = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"